--- a/client/home.html
+++ b/client/home.html
@@ -1,75 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="homestyles.css">
-    <title>Dashboard</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FormEase Dashboard</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Font Awesome for social icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
-    <header>
-        <div class="logo">Formify</div>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">My Forms</a></li>
-                <li><a href="#">Analytics</a></li>
-                <li class="dropdown">
-                    <a href="#">Profile</a>
-                    <div class="dropdown-content">
-                        <a href="#">Settings</a>
-                        <a href="#">Logout</a>
-                    </div>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <section class="welcome-section">
-            <h1>Welcome, Soham 👋</h1>
-            <button class="cta-button">+ Create New Form / Poll</button>
-            <p>You created 5 forms, received 312 responses.</p>
-        </section>
+  
+  <!-- ===== HEADER / NAVBAR ===== -->
+  <header>
+    <h1>Welcome to FormEase</h1>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Create Form</a>
+      <a href="#">Analytics</a>
+      <a href="#">Profile</a>
+    </nav>
+  </header>
 
-        <section class="recent-forms-section">
-            <h2>Recent Forms</h2>
-            <div class="card">
-                <h3>🎓 Event Feedback Form</h3>
-                <p>Status: Active</p>
-                <p>Responses: 48</p>
-                <button>View Analytics</button>
-                <button>Share</button>
-            </div>
-            <!-- Add more card elements as needed here -->
-        </section>
+  <!-- ===== MAIN CONTENT ===== -->
+  <main>
+    <section class="hero">
+      <h2>Create Feedback Forms & Polls Easily</h2>
+      <p>Design forms, collect responses, and analyze data with powerful insights.</p>
+      <button class="cta">Create New Form</button>
+    </section>
 
-        <section class="quick-stats-section">
-            <h2>Quick Stats</h2>
-            <ul>
-                <li>Total Forms Created: 5</li>
-                <li>Total Responses Received: 312</li>
-                <li>Most Popular Form: Event Feedback Form</li>
-                <li>Recent Activity: 5 latest responses</li>
-            </ul>
-        </section>
+    <section class="features">
+      <div class="card">
+        <h3>📋 Custom Forms</h3>
+        <p>Create fully customizable feedback forms and polls.</p>
+      </div>
+      <div class="card">
+        <h3>📊 Analytics</h3>
+        <p>Get visual reports with charts and response summaries.</p>
+      </div>
+      <div class="card">
+        <h3>🤝 Collaboration</h3>
+        <p>Share forms with your team and analyze together.</p>
+      </div>
+    </section>
+  </main>
 
-        <section class="shortcuts-section">
-            <h2>Shortcuts</h2>
-            <button>📊 View Analytics Dashboard</button>
-            <button>📝 Create Feedback Form</button>
-            <button>🗳️ Create Poll</button>
-            <button>📂 Download Responses</button>
-        </section>
-    </main>
+  <!-- ===== FOOTER ===== -->
+  <footer>
+    <div class="footer-left">
+      FormEase
+    </div>
 
-    <footer>
-        <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Help</a></li>
-        </ul>
-        <p>Version 1.0</p>
-    </footer>
+    <div class="footer-center">
+      <a href="#">Home</a>
+      <a href="#">Forms</a>
+      <a href="#">Analytics</a>
+      <a href="#">Help</a>
+    </div>
+
+    <div class="footer-right">
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="#"><i class="fab fa-github"></i></a>
+    </div>
+  </footer>
+
 </body>
 </html>
